connected front back